<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="http">HTTP</string>
    <string name="stream">Stream</string>
    <string name="sd">SD</string>
    <string name="uri">Uri</string>
    <string name="raw">Raw</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="loop">Loop</string>
    <string name="backward">Back</string>
    <string name="forward">Forw</string>
    <string name="info">Info</string>
    <string name="play">Play</string>
    <string name="song_title">Song Title</string>
    <string name="_00_00">00:00</string>
    <string name="volume_50">Volume: 50%</string>
</resources>